stockMsaNewsFeed/src/main/java/com/example/stockmsanewsfeed/common/error/ResponseCode.java
package com.example.stockmsanewsfeed.common.error;

public interface ResponseCode {
    String SUCCESS = "SU";
    String VALIDATION_FAIL = "VF";
    String CERTIFICATION_FAIL = "CF";
    String DATABASE_ERROR = "DBE";
}
